src/tests/testfiles/variable-declarations/3.txt
Error at 3:7: Variable initialization must have the same type (have int and float)
int b = 5.0;
    ^
